removed broken image and updated cards

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@
     position: relative;
     left: 0;
     bottom: 0;
-    padding: 0 20px; /* Add padding to create space between elements */
+    padding: 20px; /* Add padding to create space between elements */
   }
 
   #title {
