--- a/src/components/PageTitle.astro
+++ b/src/components/PageTitle.astro
@@ -7,7 +7,7 @@
 
 <style>
   .site-title {
-    margin-top: 80px;
+    margin: 80px 0;
     font-size: 36px; /* Increase font size for better emphasis */
     font-weight: 700; /* Adjust font weight for better visibility */
     text-align: center;
