--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -1,5 +1,5 @@
 ---
-import RootLayout from "../layouts/RootLayout.astro";
+import RootLayout from "../../layouts/RootLayout.astro";
 
 const res = await fetch("https://cms.dailybyte.org/graphql", {
   method: "POST",
@@ -35,8 +35,8 @@ const portfolio = data.portfolioItems.nodes;
 ---
 
 <RootLayout title="Portfolio">
-  <div class="container">
-    {portfolio.map((item) => {
+  <section class="container" role="region" aria-labelledby="portfolioHeading">
+    {portfolio.map((item, index) => {
       const {
         description,
         dateComplete,
@@ -45,35 +45,35 @@ const portfolio = data.portfolioItems.nodes;
         githubUrl,
       } = item.portfolioItemFields || "";
 
-          //       <a href={githubUrl}>
-          //   <img
-          //     class="github-logo"
-          //     src="../../public/assets/github-mark-white.svg"
-          //     alt="GitHub Logo"
-          //   />
-          // </a> 
-
-          // {dateComplete ? <p>Completed: {dateComplete}</p> : null}
-
-          // <button>Read More &rarr;</button>
-
       return (
-        <div class="card">
+        <article class="card">
           <a href={url} target="_blank">
           <div class="image-container">
             <img
-              alt="Featured Image"
+              alt={title}
               src={item.portfolioItemFields.image.node.sourceUrl}
+              loading="lazy"
             />
           </div>
-            <h3>{title}</h3>
 
+          <div class="content">
+            <h3>{title}</h3>
+            {githubUrl && (
+                <a href={githubUrl} class="github-link" target="_blank" aria-label="GitHub repository link">
+                  <img
+                    class="github-logo"
+                    src="../../public/assets/github-mark-white.svg"
+                    alt="GitHub Logo"
+                  />
+                </a>
+              )}
           <div set:html={description} class="description" />
+          </div>
           </a>
-        </div>
+        </article>
       );
     })}
-  </div>
+  </section>
 </RootLayout>
 
 <style>
