fixed GitHub image not showing in production, hopefully

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -62,7 +62,7 @@ const portfolio = data.portfolioItems.nodes;
                 <a href={githubUrl} class="github-link" target="_blank" aria-label="GitHub repository link">
                   <img
                     class="github-logo"
-                    src="../../public/assets/github-mark-white.svg"
+                    src="/assets/github-mark-white.svg"
                     alt="GitHub Logo"
                   />
                 </a>
