changed portfolio layout

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -35,7 +35,7 @@ function isActive(path) {
     --bg-color: #bbc4ac;
     --text-color: #333;
     --hover-bg-color: #dde7d0;
-    --active-color: brown;
+    --active-color: darkgreen;
   }
 
   h1, ul {
