--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -77,7 +77,18 @@ const portfolio = data.portfolioItems.nodes;
             <img src={item.portfolioItemFields.image.node.sourceUrl}/>
           </div>
           <div>
-          <div class="blog-title">{title}</div>
+          <div class="blog-title"><strong>{title}</strong>
+            {githubUrl && (
+                <a href={githubUrl} class="github-link" target="_blank" aria-label="GitHub repository link">
+                  <img
+                    class="github-logo"
+                    src="/assets/github-mark-white.svg"
+                    alt="GitHub Logo"
+                  />
+                </a>
+              )}
+            </div>
+        
           <div set:html={description} class="description"/>
           </div>
         </article>
@@ -104,8 +115,10 @@ const portfolio = data.portfolioItems.nodes;
     margin: 40px auto;
   }
   .blog-title {
+
     font-size: 20px;
     font-weight: 800;
+    display: flex;
   }
   .description {
     margin-bottom: 30px;
