added link to site

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -90,6 +90,7 @@ const portfolio = data.portfolioItems.nodes;
             </div>
         
           <div set:html={description} class="description"/>
+          <a href={url}><button>Go to Site &rarr;</button></a>
           </div>
         </article>
       );
