changed styling and added bubble letters

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,6 +18,8 @@
     position: relative;
     left: 0;
     bottom: 0;
+    background-color: black;
+    color: white;
     padding: 20px; /* Add padding to create space between elements */
   }
 
