--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -32,10 +32,10 @@ function isActive(path) {
 
 <style>
   :root {
-    --bg-color: #bbc4ac;
-    --text-color: #333;
+    --bg-color: black;
+    --text-color: white;
     --hover-bg-color: #dde7d0;
-    --active-color: darkgreen;
+    --active-color: white;
   }
 
   h1, ul {
@@ -51,6 +51,7 @@ function isActive(path) {
   }
   .logo {
     flex: 1;
+    color: white;
   }
   .nav-links {
     display: flex;
