added :hover to bubbles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,10 @@
 <footer>
   <div id="left">
-    <span>Build by Diego Gallardo and Astro.js</span>
+    <span>Built by Diego Gallardo and Astro.js</span>
   </div>
   <div id="center">
     <div id="title">Daily Byte</div>
   </div>
-  <div id="right"></div>
 </footer>
 
 <style>
