--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
 <!-- ContactForm.astro -->
 
 <form action="/api/send-email" method="post">
-  <label for="name">Namee:</label>
+  <label for="name">Name:</label>
   <input type="text" id="name" name="name" required />
 
   <label for="email">Email:</label>
